--- a/src/_metronic/_assets/sass/_config.scss
+++ b/src/_metronic/_assets/sass/_config.scss
@@ -75,7 +75,7 @@ $kt-dropdown-zindex: 95 !default;
 $kt-state-colors: (
     // Metronic states
     brand: (
-        base: #5d78ff,
+        base: #4596d1,
         inverse: #ffffff
     ),
     light: (
@@ -89,7 +89,7 @@ $kt-state-colors: (
 
     // Bootstrap states
     primary: (
-        base: #5867dd,
+        base: #025ea1,
         inverse: #ffffff
     ),
     success: (
@@ -97,7 +97,7 @@ $kt-state-colors: (
         inverse: #ffffff
     ),
     info: (
-        base: #5578eb,
+        base: #4596d1,
         inverse: #ffffff
     ),
     warning: (
