--- a/src/_metronic/_assets/sass/_config.scss
+++ b/src/_metronic/_assets/sass/_config.scss
@@ -93,7 +93,7 @@ $kt-state-colors: (
         inverse: #ffffff
     ),
     success: (
-        base: #0abb87, //1dc9b7,
+        base: #5ba252, //1dc9b7,
         inverse: #ffffff
     ),
     info: (
