fix colors, add createCation

--- a/src/_metronic/_assets/sass/_config.scss
+++ b/src/_metronic/_assets/sass/_config.scss
@@ -101,11 +101,11 @@ $kt-state-colors: (
         inverse: #ffffff
     ),
     warning: (
-        base: #ffb822,
+        base: #f6b021,
         inverse: #111111
     ),
     danger: (
-        base: #fd397a,
+        base: #c63032,
         inverse: #ffffff
     )
 ) !default;
