add v-c-parts store, routes add ldap users participants select add accept event button

--- a/src/_metronic/_assets/sass/_config.scss
+++ b/src/_metronic/_assets/sass/_config.scss
@@ -93,7 +93,7 @@ $kt-state-colors: (
         inverse: #ffffff
     ),
     success: (
-        base: #5ba252, //1dc9b7,
+        base: #6AB16F, //1dc9b7,
         inverse: #ffffff
     ),
     info: (
@@ -105,7 +105,7 @@ $kt-state-colors: (
         inverse: #111111
     ),
     danger: (
-        base: #c63032,
+        base: #E18987,
         inverse: #ffffff
     )
 ) !default;
